--- a/styles/coffeemaker-web-app.css
+++ b/styles/coffeemaker-web-app.css
@@ -1,6 +1,6 @@
 .welcome-message-container {
   
-  background-image: url('../images/welcome-background.jpg');
+  background-image: url('../images/coffee-maker-background.jpg');
   background-size: cover;
   
   background-position: center;
@@ -75,9 +75,9 @@
 .section-image-even {
   height: 300px; 
   animation: slide-in-left 1s ease-out forwards;
-  padding-top: 20px;
-  padding-bottom: 20px;
   
+  border: 2px solid black;
+  margin: 20px 0px;
 }
 
 .section-content-even {
@@ -157,4 +157,45 @@
   align-items: center;
   justify-content: center;
 
+}
+
+.section-image-big {
+  border: 2px solid black;
+  height: 1200px; 
+  animation: slide-in-left 1s ease-out forwards;
+  margin: 20px 0px;
+  
+}
+
+.demo-section {
+  padding-top: 20px;
+  flex-wrap: wrap;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  
+  animation: slide-in-left 1s ease-out forwards;
+  width: 30%;
+  padding-right: 60px;
+  color: black;
+  
+}
+
+
+.video-container {
+  position: relative;
+  width: 100%;
+  max-width: 1200px;
+  aspect-ratio: 16 / 9;
+  margin: 20px 0px;
+  border: 2px solid black;
+}
+
+
+.demo-vid {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
 }
