--- a/styles/funfacts.css
+++ b/styles/funfacts.css
@@ -1,6 +1,6 @@
 .welcome-message-container {
   
-  background-image: url('../images/welcome-background.jpg');
+  background-image: url('../images/facts-background.jpg');
   background-size: cover;
   
   background-position: center;
@@ -12,8 +12,7 @@
   display: flex;
   min-height: 500px;
   margin-top: 60px;
-  
-  
+
 }
 
 @keyframes slide-in-left {
@@ -56,9 +55,9 @@
 
 .welcome-message-image {
   margin-left: 1%;
-  /*margni-top set to 5% or 200px if I chose to just have image in center */
   margin-top: 5%;
   height: 300px; 
+  
   animation: slide-in-right 1s ease-out forwards;
 }
 
@@ -73,11 +72,10 @@
 }
 
 .section-image-even {
-  height: 300px; 
+  height: 400px;
   animation: slide-in-left 1s ease-out forwards;
   padding-top: 20px;
   padding-bottom: 20px;
-  
 }
 
 .section-content-even {
@@ -85,7 +83,7 @@
   flex-wrap: wrap;
   word-wrap: break-word;
   overflow-wrap: break-word;
- 
+  
   
   animation: slide-in-right 1s ease-out forwards;
   
@@ -114,13 +112,14 @@
   background-color:#a81b1b;
   justify-content: center; /* Center horizontally */
   align-items: center; /* Center vertically */
-  
+  padding-bottom: 20px;
 }
 
 .section-image-odd {
-  height: 300px; 
+  border: 2px solid black;
+  height: 400px; 
   animation: slide-in-right 1s ease-out forwards;
-  padding-bottom: 20px;
+  
 }
 
 .section-content-odd {
@@ -146,6 +145,7 @@
         -2px 2px 0px black; /* Bottom-left shadow */
   
 }
+
 
 .section-text-odd {
   font-size: 40;
