[Implementation] Fixed overlow bug for images and demos

--- a/styles/data-analysis-project.css
+++ b/styles/data-analysis-project.css
@@ -199,7 +199,8 @@
 
 .section-image-big {
   border: 2px solid black;
-  height: 700px; 
+  width: 99%;
+  max-width: 1200px;
   animation: slide-in-left 1s ease-out forwards;
   margin: 20px 0px;
   
