--- a/styles/coffeemaker-web-app.css
+++ b/styles/coffeemaker-web-app.css
@@ -161,7 +161,9 @@
 
 .section-image-big {
   border: 2px solid black;
-  height: 1200px; 
+  width: 99%;
+  max-width: 1200px;
+  
   animation: slide-in-left 1s ease-out forwards;
   margin: 20px 0px;
   
@@ -183,7 +185,7 @@
 
 .video-container {
   position: relative;
-  width: 100%;
+  width: 99%;
   max-width: 1200px;
   aspect-ratio: 16 / 9;
   margin: 20px 0px;
