--- a/styles/home-page.css
+++ b/styles/home-page.css
@@ -158,3 +158,19 @@
   justify-content: center;
 
 }
+
+
+.section-link-odd {
+  font-size: 40;
+  text-decoration: underline;
+  color: white; /* Changes the text color */
+  
+}
+
+.section-link-odd:hover {
+  color: black;
+  
+}
+
+
+
